--- a/index.html
+++ b/index.html
@@ -154,14 +154,6 @@ h5 {
 }
         /* Footer */
         footer {
-            background-color: #1d4ed8;
-        }
-	
-
-      /* Footer Styling */
-        footer {
-            background-color: crimson;
-            color: white;
             text-align: center;
             padding: 1rem;
             margin-top: 2rem;
@@ -253,7 +245,8 @@ h5 {
         </div>
     </div>
   
-    <footer class="bg-LightCyan-600 text-white text-center py-4">
+    <footer class="bg-LightCyan-600 text-red text-center py-4">
+	     <p style="text-align: center; color: black; padding-left: 2em; padding-right: 2em;">Education is a daily journey, where both your commitment and your teachers' hard work shape your future. Embrace every class, stay focused, and together we’ll unlock your full potential.</p>
         <p>&copy; 2025 Government Girls College Daulatpur All rights reserved.</p>
     </footer>
 
