--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ h5 {
         <div class="col-12 col-md-6">
 		
             <img src="./gallery/33.jpg" alt="Image related to chemistry learning" class="img-fluid second-image">
-			<p style="text-align: center; color: white; font-size: 1.0rem; font-family: Arial, sans-serif; padding-left: 0em; padding-right: 0em;">PRINCIPAL.KHALID HUSSAIN BURIRO</p><br>
+			<p style="text-align: center; color: red; font-size: 1.0rem; font-family: Arial, sans-serif; padding-left: 0em; padding-right: 0em;">PRINCIPAL.KHALID HUSSAIN BURIRO</p><br>
         </div>
 
         <!-- Right-side text -->
@@ -241,13 +241,13 @@ h5 {
 
 <p style="text-align: center; color: black; font-size: 1.0rem; font-family: Arial, sans-serif; padding-left: 0em; padding-right: 2em;">Education is the most powerful tool you can use to shape your future. It is not simply about earning grades, but about developing your intellect, character, and the skills needed to navigate the world ahead. Through education, you gain the ability to think critically, solve problems, and contribute meaningfully to society.</p>
 <p style="text-align: center; color: black; font-size: 1.0rem; font-family: Arial, sans-serif; padding-left: 0em; padding-right: 2em;">As you move forward in your studies, always remember that education is not just about what you learn but how you live and work each day. Let discipline guide you in your efforts, and education will open doors you never imagined.</p><br> 
- <!-- Footer -->
+ 
         </div>
     </div>
   
-    <footer">
+    <footer>
 	     <p style="text-align: center; color: black; padding-left: 2em; padding-right: 2em;">Education is a daily journey, where both your commitment and your teachers' hard work shape your future. Embrace every class, stay focused, and together we’ll unlock your full potential.</p>
-        <p class="bg-LightCyan-600 text-red text-center py-4>&copy; 2025 Government Girls College Daulatpur All rights reserved.</p>
+        <p style="bg-LightCyan-600 text-red text-center py-4;">&copy; 2025 Government Girls College Daulatpur All rights reserved.</p>
     </footer>
 
 
