--- a/index.html
+++ b/index.html
@@ -246,8 +246,8 @@ h5 {
     </div>
   
     <footer>
-	     <p style="text-align: center; color: black; padding-left: 2em; padding-right: 2em;">Education is a daily journey, where both your commitment and your teachers' hard work shape your future. Embrace every class, stay focused, and together we’ll unlock your full potential.</p>
-        <p style="bg-LightCyan-600 text-red text-center py-4;">&copy; 2025 Government Girls College Daulatpur All rights reserved.</p>
+	     <p style="text-align: center; color: red; padding-left: 2em; padding-right: 2em;">Education is a daily journey, where both your commitment and your teachers' hard work shape your future. Embrace every class, stay focused, and together we’ll unlock your full potential.</p>
+        <p style="bg-LightCyan-600 text-red text:center; py-4;">&copy; 2025 Government Girls College Daulatpur All rights reserved.</p>
     </footer>
 
 
