--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@ h5 {
         <!-- Left-side image -->
         <div class="col-12 col-md-6">
 		
-            <img src="./gallery/33.jpg" alt="Image related to chemistry learning" class="img-fluid second-image">
+            <img src="./gallery/33.jpg" alt="Image" class="img-fluid second-image">
 			<p style="text-align: center; color: red; font-size: 1.0rem; font-family: Arial, sans-serif; padding-left: 0em; padding-right: 0em;">PRINCIPAL.KHALID HUSSAIN BURIRO</p><br>
         </div>
 
