--- a/index.html
+++ b/index.html
@@ -226,6 +226,9 @@ h5 {
            </div>
       </div>
     </div>
+	  <div class="col-12 col-md-6 text-center">
+  <img src="./gallery/kk.jpg" alt="Chemistry" class="section-img img-fluid rounded" />
+</div>
 	<p style="text-align: center; color: black; font-size: 1.3rem; font-family: Arial, sans-serif; padding-left: 1em; padding-right: 2em;">Note: Students must follow college rules and wear the official uniform neatly and respectfully, reflecting the values of our institution!.</p>
 	<div class="container mt-5 d-flex flex-wrap justify-content-between">
         <!-- Left-side image -->
