--- a/index.html
+++ b/index.html
@@ -17,6 +17,86 @@
             padding: 0;
             background:  #E0FFFF;
         }
+	    .slider-container {
+      width: 90%;  /* Use relative unit for width */
+      max-width: 100vw; /* Max width to prevent overflow */
+      overflow: hidden;
+      position: relative;
+      margin: 5vw auto; /* Margin with vw for responsiveness */
+      border-radius: 1em; /* Rounded corners using relative units */
+      box-shadow: 0 0.5em 2em rgba(0, 0, 0, 0.1); /* Soft shadow with relative units */
+    }
+
+    .slider {
+      display: flex;
+      animation: slide 20s linear infinite;
+    }
+
+    .slider img {
+      width: 80%;  /* Set the image width to 80% of the container */
+      max-width: 500px;  /* Limit image size to a max width */
+      height: auto;
+      flex-shrink: 0;
+      border-radius: 1em; /* Rounded image corners using relative units */
+      transition: transform 0.3s ease-in-out; /* Smooth hover effect */
+      margin-right: 5vw; /* Margin to space the images */
+    }
+
+    /* Hover effect on images */
+    .slider img:hover {
+      transform: scale(1.05); /* Slight zoom effect */
+    }
+
+    @keyframes slide {
+      0% {
+        transform: translateX(0);
+      }
+      100% {
+        transform: translateX(-100%);
+      }
+    }
+
+    /* Duplicate images for continuous scrolling */
+    .slider::after {
+      content: '';
+      display: block;
+      width: 100%;
+      height: 100%;
+      background: none;
+      position: absolute;
+      top: 0;
+      left: 100%;
+      animation: slide 20s linear infinite;
+    }
+
+    .slider img + .slider img {
+      margin-left: 3vw; /* Add margin between images using vw for responsiveness */
+    }
+
+    /* Responsive adjustments for smaller screens */
+    @media (max-width: 768px) {
+      .slider-container {
+        width: 95%; /* Adjust width for smaller devices */
+        margin: 3vw auto;
+      }
+
+      .slider img {
+        width: 90%; /* Images fill more space on smaller screens */
+        max-width: 400px; /* Limit the size further */
+      }
+    }
+
+    @media (max-width: 480px) {
+      .slider-container {
+        width: 100%; /* Full width for very small screens */
+        margin: 1vw auto;
+      }
+
+      .slider img {
+        width: 90%; /* Images fill more space */
+        max-width: 350px; /* Limit image size for mobile */
+      }
+    }
  /* Custom Navbar Color and Padding */
         .navbar-custom {
          background-color: #FFF8DC;
@@ -179,10 +259,17 @@ h5 {
             </div>
         </div>
     </nav>
-
-	  <div class="col-12 col-md-6 text-center">
-  <img src="./gallery/exam form.jpg" alt="college" class="section-img img-fluid rounded" />
-</div>
+<div class="slider-container">
+    <div class="slider">
+      <img src="./gallery/aa.jpg" alt="Image 1">
+      <img src="./gallery/exam form.jpg" alt="Image 2">
+      <img src="./gallery/exam form.jpg" alt="Image 3">
+      <img src="./gallery/exam form.jpg" alt="Image 4">
+      <!-- Duplicate the images for continuous loop -->
+      <img src="C:/Users/hp/Desktop/college/gallery/aa.jpg" alt="Image 1">
+      <img src="./gallery/aa.jpg" alt="Image 2">
+      
+    </div>
 	<p style="text-align: center; color: black; font-size: 1.3rem; font-family: Arial, sans-serif; padding-left: 1em; padding-right: 2em;">Note: Students must follow college rules and wear the official uniform neatly and respectfully, reflecting the values of our institution!.</p>
 	<div class="container mt-5 d-flex flex-wrap justify-content-between">
         <!-- Left-side image -->
