--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@ h5 {
       <img src="./gallery/exam form.jpg" alt="Image 3">
       <img src="./gallery/aa.jpg" alt="Image 4">
       
-    </div>
+    </div><br>
 	<p style="text-align: center; color: black; font-size: 1.3rem; font-family: Arial, sans-serif; padding-left: 1em; padding-right: 2em;">Note: Students must follow college rules and wear the official uniform neatly and respectfully, reflecting the values of our institution!.</p>
 	<div class="container mt-5 d-flex flex-wrap justify-content-between">
         <!-- Left-side image -->
