--- a/index.html
+++ b/index.html
@@ -102,6 +102,24 @@
         max-width: 350px; /* Limit image size for mobile */
       }
     }
+	    
+      .slider img {
+        width: 90%; /* Images fill more space on smaller screens */
+        max-width: 400px; /* Limit the size further */
+      }
+    }
+
+    @media (max-width: 480px) {
+      .slider-container {
+        width: 100%; /* Full width for very small screens */
+        margin: 1vw auto;
+      }
+
+      .slider img {
+        width: 90%; /* Images fill more space */
+        max-width: 350px; /* Limit image size for mobile */
+      }
+    }
  /* Custom Navbar Color and Padding */
       
 
