--- a/index.html
+++ b/index.html
@@ -22,86 +22,84 @@
             padding-left: 2vw; /* Relative padding based on viewport width */
             padding-right: 2vw; /* Relative padding based on viewport width */
         }
-	    .slider-container {
-      width: 90%;  /* Use relative unit for width */
-      max-width: 100vw; /* Max width to prevent overflow */
-      overflow: hidden;
-      position: relative;
-      margin: 3vw auto; /* Margin with vw for responsiveness */
-      border-radius: 1em; /* Rounded corners using relative units */
-      box-shadow: 0 0.5em 2em rgba(0, 0, 0, 0.1); /* Soft shadow with relative units */
-    }
+	   .slider-container {
+  width: 90%;
+  max-width: 100vw;
+  overflow: hidden;
+  position: relative;
+  margin: 3vw auto;
+  border-radius: 1em;
+  box-shadow: 0 0.5em 2em rgba(0, 0, 0, 0.1);
+}
 
-    .slider {
-      display: flex;
-      animation: slide 20s linear infinite;
-    }
+.slider {
+  display: flex;
+  animation: slide 20s linear infinite;
+}
 
-    .slider img {
-      width: 80%;  /* Set the image width to 80% of the container */
-      max-width: 500px;  /* Limit image size to a max width */
-      height: auto;
-      flex-shrink: 0;
-      border-radius: 1em; /* Rounded image corners using relative units */
-      transition: transform 0.1s ease-in-out; /* Smooth hover effect */
-      margin-right: 5vw; /* Margin to space the images */
-    }
+.slider img {
+  width: 80%;
+  max-width: 500px;
+  height: auto;
+  flex-shrink: 0;
+  border-radius: 1em;
+  transition: transform 0.1s ease-in-out;
+  margin-right: 5vw;
+  will-change: transform;
+}
 
-    /* Hover effect on images */
-    .slider img:hover {
-      transform: scale(1.05); /* Slight zoom effect */
-    }
+.slider img:hover {
+  transform: scale(1.05);
+}
 
-    @keyframes slide {
-      0% {
-        transform: translateX(0);
-      }
-      100% {
-        transform: translateX(-100%);
-      }
-    }
+@keyframes slide {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
 
-    /* Duplicate images for continuous scrolling */
-    .slider::after {
-      content: '';
-      display: block;
-      width: 100%;
-      height: 100%;
-      background: none;
-      position: absolute;
-      top: 0;
-      left: 100%;
-      animation: slide 50s linear infinite;
-    }
+/* Responsive adjustments for smaller screens */
+@media (max-width: 1024px) {
+  .slider-container {
+    width: 95%; /* Adjust width for medium screens like tablets */
+    margin: 3vw auto;
+  }
 
-    .slider img + .slider img {
-      margin-left: 3vw; /* Add margin between images using vw for responsiveness */
-    }
+  .slider img {
+    width: 90%; /* Images fill more space on tablets */
+    max-width: 450px; /* Limit the size further */
+    margin-right: 4vw; /* Slight margin for better spacing */
+  }
+}
 
-    /* Responsive adjustments for smaller screens */
-    @media (max-width: 768px) {
-      .slider-container {
-        width: 95%; /* Adjust width for smaller devices */
-        margin: 3vw auto;
-      }
+@media (max-width: 768px) {
+  .slider-container {
+    width: 95%;
+    margin: 3vw auto;
+  }
 
-      .slider img {
-        width: 90%; /* Images fill more space on smaller screens */
-        max-width: 400px; /* Limit the size further */
-      }
-    }
+  .slider img {
+    width: 90%;
+    max-width: 400px; /* Further reduce max-width on smaller screens */
+    margin-right: 4vw; /* Space the images out a bit more */
+  }
+}
 
-    @media (max-width: 480px) {
-      .slider-container {
-        width: 100%; /* Full width for very small screens */
-        margin: 1vw auto;
-      }
+@media (max-width: 480px) {
+  .slider-container {
+    width: 100%; /* Full width for very small screens */
+    margin: 1vw auto;
+  }
 
-      .slider img {
-        width: 90%; /* Images fill more space */
-        max-width: 350px; /* Limit image size for mobile */
-      }
-    }
+  .slider img {
+    width: 100%; /* Images take up full container width */
+    max-width: 350px; /* Limit image size */
+    margin-right: 0; /* No extra margin on mobile */
+  }
+}
 
  /* Custom Navbar Color and Padding */
       
