--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ h5 {
         }
     </style>
   </head>
-  <body>
+  <body class="bg-gradient-to-br from-teal-300 via-indigo-200 to-blue-300">
 <div class="container mt-0 pt-0"> <!-- Remove top margin and padding -->
     <div class="row d-flex justify-content-between align-items-center"> <!-- Flex layout for left-right alignment -->
         <!-- Left Side - College Heading -->
