--- a/CONTACT-US.html
+++ b/CONTACT-US.html
@@ -78,12 +78,12 @@
         }
     </style>
 </head>
-<body>
+<body class="bg-gradient-to-br from-teal-300 via-indigo-200 to-blue-300">
 
     <!-- Bootstrap Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light navbar-custom p-4">
         <div class="container-fluid">
-            <a class="navbar-brand text-white" href="Government-Girls-College-Daulatpur.html">Government Girls College Daulatpur</a>
+            <a class="navbar-brand text-white" href="Government-Girls-College-Daulatpur.html">Govt Girls College Daulatpur</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
