--- a/COLLEGE.html
+++ b/COLLEGE.html
@@ -73,7 +73,7 @@
 		
     </style>
 </head>
-<body class="bg-gradient-to-br from-teal-300 via-indigo-200 to-blue-300">>
+<body class="bg-gradient-to-br from-teal-300 via-indigo-200 to-blue-300">
     <!-- Bootstrap Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light navbar-custom p-2">
         <div class="container-fluid">
