--- a/CONTACT-US.html
+++ b/CONTACT-US.html
@@ -83,24 +83,24 @@
     <!-- Bootstrap Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light navbar-custom p-2">
         <div class="container-fluid">
-            <a class="navbar-brand text-white" href="Government-Girls-College-Daulatpur.html">Govt Girls College Daulatpur</a>
+            <a class="navbar-brand text-black" href="Government-Girls-College-Daulatpur.html">Govt Girls College Daulatpur</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link text-white active" aria-current="page" href="index.html">HOME</a>
+                        <a class="nav-link text-black active" aria-current="page" href="index.html">HOME</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="ONLINE-TEST.html">ONLINE TEST</a>
+                        <a class="nav-link text-black" href="ONLINE-TEST.html">ONLINE TEST</a>
                     </li>
                     
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="ABOUT-US.html">ABOUT US</a>
+                        <a class="nav-link text-black" href="ABOUT-US.html">ABOUT US</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="CONTACT-US.html">CONTACT US</a>
+                        <a class="nav-link text-black" href="CONTACT-US.html">CONTACT US</a>
                     </li>
                 </ul>
             </div>
