--- a/Government-Girls-College-Daulatpur.html
+++ b/Government-Girls-College-Daulatpur.html
@@ -15,7 +15,7 @@
             line-height: 1.2;
             margin: 0;
             padding: 0;
-            background:  #E0FFFF;
+            background: #E0FFFF;
         }
 
         /* Custom Navbar Color and Padding */
@@ -39,16 +39,17 @@
         .gallery img {
             width: 100%;
             height: auto;
-            max-height: 15vw; /* This ensures the images are responsive */
             object-fit: cover;
             transition: all 0.3s ease;
         }
 
+        /* Row styling */
         .row {
             margin-right: 0;
             margin-left: 0;
         }
 
+        /* Gallery item padding */
         .col-12, .col-md-4, .col-lg-3 {
             padding-right: 0;
             padding-left: 0;
@@ -116,27 +117,27 @@
         /* Responsive adjustments */
         @media (max-width: 768px) {
             .gallery {
-                width: 45%;
+                width: 100%;  /* Full width for images on smaller screens */
+                height: auto;
             }
         }
 
         @media (max-width: 576px) {
-            .gallery {
-                width: 90%; /* Take up more space on small screens */
+            .gallery img {
+                max-height: 200px;  /* Restrict image height for smaller screens */
+                object-fit: cover;
             }
         }
 
-        /* Ensure modal is responsive */
+        /* Ensure modal images are responsive */
         @media (max-width: 576px) {
             .modal img {
                 width: 90%;
-                max-width: none;
             }
         }
 
     </style>
 </head>
-
 <body class="bg-gradient-to-br from-teal-300 via-indigo-200 to-blue-300">
 
     <!-- Bootstrap Navbar -->
