--- a/Government-Girls-College-Daulatpur.html
+++ b/Government-Girls-College-Daulatpur.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Government Girls College</title>
-    <!-- Link to Bootstrap CSS (CDN) -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Font Awesome Icons CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         /* Global Styles */
@@ -35,7 +33,7 @@
             width: 100%;
         }
 
-        /* Image styling */
+        /* Image styling for gallery */
         .gallery img {
             width: 100%;
             height: auto;
@@ -116,23 +114,26 @@
 
         /* Responsive adjustments */
         @media (max-width: 768px) {
-            .gallery {
-                width: 100%;  /* Full width for images on smaller screens */
-                height: auto;
+            .gallery img {
+                width: 100%; /* Full width for images on mobile screens */
+                height: auto; /* Maintain aspect ratio */
+                object-fit: cover; /* Ensure the image covers the container */
             }
         }
 
         @media (max-width: 576px) {
             .gallery img {
-                max-height: 200px;  /* Restrict image height for smaller screens */
-                object-fit: cover;
+                width: 100%;  /* Full width for mobile screens */
+                height: auto; /* Maintain aspect ratio */
+                object-fit: cover;  /* Maintain the cover effect */
             }
         }
 
         /* Ensure modal images are responsive */
         @media (max-width: 576px) {
             .modal img {
-                width: 90%;
+                width: 100%; /* Full width for modal images on smaller screens */
+                height: auto; /* Maintain aspect ratio */
             }
         }
 
@@ -197,25 +198,6 @@
                     </a>
                 </div>
             </div>
-
-            <!-- Gallery Item 4 -->
-            <div class="col-12 col-md-4 col-lg-3">
-                <div class="gallery">
-                    <a href="#" onclick="openModal(3)">
-                        <img src="./gallery/hh.jpg" alt="hh" class="img-fluid">
-                    </a>
-                </div>
-            </div>
-
-            <!-- Gallery Item 5 -->
-            <div class="col-12 col-md-4 col-lg-3">
-                <div class="gallery">
-                    <a href="#" onclick="openModal(4)">
-                        <img src="./gallery/gg.jpg" alt="gg" class="img-fluid">
-                    </a>
-                </div>
-            </div>
-            <!-- More gallery items... -->
         </div>
     </div>
 
