--- a/Government-Girls-College-Daulatpur.html
+++ b/Government-Girls-College-Daulatpur.html
@@ -177,7 +177,7 @@
         <h1 style="text-align:center; font-size: 2rem;">Image Gallery</h1>
 
         <div class="row">
-            <!-- Gallery Item 1 -->
+            <!-- Gallery Items -->
             <div class="col-12 col-md-4 col-lg-3">
                 <div class="gallery">
                     <a href="#" onclick="openModal(0)">
@@ -186,7 +186,6 @@
                 </div>
             </div>
 
-            <!-- Gallery Item 2 -->
             <div class="col-12 col-md-4 col-lg-3">
                 <div class="gallery">
                     <a href="#" onclick="openModal(1)">
@@ -195,7 +194,6 @@
                 </div>
             </div>
 
-            <!-- Gallery Item 3 -->
             <div class="col-12 col-md-4 col-lg-3">
                 <div class="gallery">
                     <a href="#" onclick="openModal(2)">
@@ -204,7 +202,6 @@
                 </div>
             </div>
 
-            <!-- Gallery Item 4 -->
             <div class="col-12 col-md-4 col-lg-3">
                 <div class="gallery">
                     <a href="#" onclick="openModal(3)">
@@ -212,44 +209,51 @@
                     </a>
                 </div>
             </div>
-              <div class="col-12 col-md-4 col-lg-3">
+            
+            <!-- Additional Images -->
+            <div class="col-12 col-md-4 col-lg-3">
                 <div class="gallery">
-                    <a href="#" onclick="openModal(3)">
+                    <a href="#" onclick="openModal(4)">
                         <img src="./gallery/gg.jpg" alt="gg" class="img-fluid">
                     </a>
                 </div>
             </div>
-               <div class="col-12 col-md-4 col-lg-3">
+
+            <div class="col-12 col-md-4 col-lg-3">
                 <div class="gallery">
-                    <a href="#" onclick="openModal(3)">
+                    <a href="#" onclick="openModal(5)">
                         <img src="./gallery/ff.jpg" alt="ff" class="img-fluid">
                     </a>
                 </div>
             </div>
-              <div class="col-12 col-md-4 col-lg-3">
+
+            <div class="col-12 col-md-4 col-lg-3">
                 <div class="gallery">
-                    <a href="#" onclick="openModal(3)">
+                    <a href="#" onclick="openModal(6)">
                         <img src="./gallery/ee.jpg" alt="ee" class="img-fluid">
                     </a>
                 </div>
             </div>
-              <div class="col-12 col-md-4 col-lg-3">
+
+            <div class="col-12 col-md-4 col-lg-3">
                 <div class="gallery">
-                    <a href="#" onclick="openModal(3)">
+                    <a href="#" onclick="openModal(7)">
                         <img src="./gallery/dd.jpg" alt="dd" class="img-fluid">
                     </a>
                 </div>
             </div>
-              <div class="col-12 col-md-4 col-lg-3">
+
+            <div class="col-12 col-md-4 col-lg-3">
                 <div class="gallery">
-                    <a href="#" onclick="openModal(3)">
+                    <a href="#" onclick="openModal(8)">
                         <img src="./gallery/cc.jpg" alt="cc" class="img-fluid">
                     </a>
                 </div>
             </div>
-              <div class="col-12 col-md-4 col-lg-3">
+
+            <div class="col-12 col-md-4 col-lg-3">
                 <div class="gallery">
-                    <a href="#" onclick="openModal(3)">
+                    <a href="#" onclick="openModal(9)">
                         <img src="./gallery/bb.jpg" alt="bb" class="img-fluid">
                     </a>
                 </div>
@@ -268,46 +272,44 @@
     <!-- JavaScript -->
     <script>
         // Array of image paths
-       // Array of image paths
-const images = [
-    './gallery/aa.jpg',
-    './gallery/jj.jpg',
-    './gallery/ii.jpg',
-    './gallery/hh.jpg',
-    './gallery/gg.jpg',
-    './gallery/ff.jpg',
-    './gallery/ee.jpg',
-    './gallery/dd.jpg',
-    './gallery/cc.jpg',
-    './gallery/bb.jpg'
-];
+        const images = [
+            './gallery/aa.jpg',
+            './gallery/jj.jpg',
+            './gallery/ii.jpg',
+            './gallery/hh.jpg',
+            './gallery/gg.jpg',
+            './gallery/ff.jpg',
+            './gallery/ee.jpg',
+            './gallery/dd.jpg',
+            './gallery/cc.jpg',
+            './gallery/bb.jpg'
+        ];
 
-let currentImageIndex = -1;
+        let currentImageIndex = -1;
 
-// Function to open the modal with the clicked image
-function openModal(index) {
-    currentImageIndex = index;
-    document.getElementById('imageModal').style.display = 'flex';
-    document.getElementById('modalImage').src = images[currentImageIndex]; // Set the clicked image
-}
+        // Function to open the modal with the clicked image
+        function openModal(index) {
+            currentImageIndex = index;
+            document.getElementById('imageModal').style.display = 'flex';
+            document.getElementById('modalImage').src = images[currentImageIndex]; // Set the clicked image
+        }
 
-// Function to close the modal
-function closeModal() {
-    document.getElementById('imageModal').style.display = 'none';
-}
+        // Function to close the modal
+        function closeModal() {
+            document.getElementById('imageModal').style.display = 'none';
+        }
 
-// Function to change images (Next/Previous)
-function changeImage(direction) {
-    currentImageIndex += direction;
+        // Function to change images (Next/Previous)
+        function changeImage(direction) {
+            currentImageIndex += direction;
 
-    // If current index is out of bounds, wrap around
-    if (currentImageIndex < 0) currentImageIndex = images.length - 1;
-    if (currentImageIndex >= images.length) currentImageIndex = 0;
+            // If current index is out of bounds, wrap around
+            if (currentImageIndex < 0) currentImageIndex = images.length - 1;
+            if (currentImageIndex >= images.length) currentImageIndex = 0;
 
-    // Update the image source in the modal
-    document.getElementById('modalImage').src = images[currentImageIndex];
-}
-        
+            // Update the image source in the modal
+            document.getElementById('modalImage').src = images[currentImageIndex];
+        }
     </script>
 
     <!-- Bootstrap JavaScript (Optional) -->
