--- a/Government-Girls-College-Daulatpur.html
+++ b/Government-Girls-College-Daulatpur.html
@@ -274,15 +274,17 @@
         // Array of image paths
         const images = [
             './gallery/aa.jpg',
-            './gallery/jj.jpg',
-            './gallery/ii.jpg',
-            './gallery/hh.jpg',
-            './gallery/gg.jpg',
-            './gallery/ff.jpg',
-            './gallery/ee.jpg',
-            './gallery/dd.jpg',
+            './gallery/bb.jpg',
             './gallery/cc.jpg',
-            './gallery/bb.jpg'
+             './gallery/dd.jpg',
+             './gallery/ee.jpg',
+             './gallery/ff.jpg',
+            './gallery/gg.jpg',
+             './gallery/hh.jpg',
+             './gallery/ii.jpg',
+            './gallery/jj.jpg',
+           
+           
         ];
 
         let currentImageIndex = -1;
