--- a/Government-Girls-College-Daulatpur.html
+++ b/Government-Girls-College-Daulatpur.html
@@ -291,7 +291,7 @@
              './gallery/hh.jpg',
              './gallery/ii.jpg',
             './gallery/jj.jpg',
-             './gallery/kk.jpg'
+             './gallery/kk.jpg',
            
            
         ];
