--- a/Government-Girls-College-Daulatpur.html
+++ b/Government-Girls-College-Daulatpur.html
@@ -261,6 +261,22 @@
                     </a>
                 </div>
             </div>
+            
+            <div class="col-12 col-md-4 col-lg-3">
+                <div class="gallery">
+                    <a href="#" onclick="openModal(9)">
+                        <img src="./gallery/jj.jpg" alt="jj" class="img-fluid">
+                    </a>
+                </div>
+            </div>
+            
+            <div class="col-12 col-md-4 col-lg-3">
+                <div class="gallery">
+                    <a href="#" onclick="openModal(9)">
+                        <img src="./gallery/kk.jpg" alt="kk" class="img-fluid">
+                    </a>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -284,6 +300,8 @@
             './gallery/ff.jpg',
             './gallery/ee.jpg',
             './gallery/dd.jpg',
+             './gallery/jj.jpg',
+             './gallery/kk.jpg',
             './gallery/cc.jpg',
             './gallery/bb.jpg'
         ];
