--- a/Government-Girls-College-Daulatpur.html
+++ b/Government-Girls-College-Daulatpur.html
@@ -293,17 +293,17 @@
         // Array of image paths
         const images = [
             './gallery/aa.jpg',
-            './gallery/jj.jpg',
+            
             './gallery/ii.jpg',
             './gallery/hh.jpg',
             './gallery/gg.jpg',
             './gallery/ff.jpg',
             './gallery/ee.jpg',
             './gallery/dd.jpg',
-             './gallery/jj.jpg',
-             './gallery/kk.jpg',
             './gallery/cc.jpg',
-            './gallery/bb.jpg'
+            './gallery/bb.jpg',
+               './gallery/jj.jpg',
+             './gallery/kk.jpg'
         ];
 
         let currentImageIndex = -1;
