--- a/COLLEGE.html
+++ b/COLLEGE.html
@@ -24,6 +24,18 @@
             padding-left: 2vw; /* Relative padding based on viewport width */
             padding-right: 2vw; /* Relative padding based on viewport width */
         }
+	    .image-container {
+  width: 100%; /* Relative width to parent container */
+  max-width: 100%; /* Prevents image from growing beyond the screen width */
+  display: block;
+  position: relative; /* Optional for future positioning adjustments */
+}
+
+/* Image styling */
+.image-container img {
+  width: 100%; /* Makes the image responsive by scaling it to 100% of its container width */
+  height: auto; /* Keeps the aspect ratio of the image intact */
+}
 	
     footer {
             background-color: #1D4ED8; /* Blue background */
@@ -60,9 +72,9 @@
             </div>
         </div>
     </nav>
-	 
-        <img src="./gallery/aa.jpg" alt="aa" class="img-fluid">
-	
+	 <div class="image-container">
+    <img src="./gallery/aa.jpg" alt="Responsive Image">
+  </div>
          
 <div class="intro-section">
         <h2 style="text-align: center; color: red; font-size: 2rem">GOVERNMENT GIRLS COLLEGE DAULATPUR</h2><br>
