--- a/COLLEGE.html
+++ b/COLLEGE.html
@@ -24,9 +24,8 @@
             padding-left: 2vw; /* Relative padding based on viewport width */
             padding-right: 2vw; /* Relative padding based on viewport width */
         }
-	    .image-container {
+.image-container {
   width: 100%; /* Relative width to parent container */
-  max-width: 100%; /* Prevents image from growing beyond the screen width */
   display: block;
   position: relative; /* Optional for future positioning adjustments */
 }
@@ -35,6 +34,15 @@
 .image-container img {
   width: 100%; /* Makes the image responsive by scaling it to 100% of its container width */
   height: auto; /* Keeps the aspect ratio of the image intact */
+  max-width: 100%; /* Ensures the image won't grow beyond its container's width */
+}
+
+/* Media Query for Laptop-sized Screens (and larger) */
+@media (min-width: 1024px) {
+  .image-container img {
+    max-width: 80%; /* Limits the image width to 80% on laptop screens */
+    margin: 0 auto; /* Centers the image */
+  }
 }
 	
     footer {
