--- a/COLLEGE.html
+++ b/COLLEGE.html
@@ -25,24 +25,18 @@
             padding-right: 2vw; /* Relative padding based on viewport width */
         }
 .image-container {
-  width: 100%; /* Relative width to parent container */
-  display: block;
-  position: relative; /* Optional for future positioning adjustments */
+  position: relative;
+  width: 100vw; /* Set the container width to the full viewport width */
+  height: 100vh; /* Set the container height to the full viewport height */
+  overflow: hidden; /* Ensures the image is contained and prevents any overflow */
 }
 
 /* Image styling */
 .image-container img {
-  width: 100%; /* Makes the image responsive by scaling it to 100% of its container width */
-  height: auto; /* Keeps the aspect ratio of the image intact */
-  max-width: 100%; /* Ensures the image won't grow beyond its container's width */
-}
-
-/* Media Query for Laptop-sized Screens (and larger) */
-@media (min-width: 1024px) {
-  .image-container img {
-    max-width: 80%; /* Limits the image width to 80% on laptop screens */
-    margin: 0 auto; /* Centers the image */
-  }
+  width: 100%; /* Make the image fill the container width */
+  height: 100%; /* Make the image fill the container height */
+  object-fit: cover; /* Ensures the image maintains its aspect ratio while filling the container */
+  object-position: center; /* Centers the image if it gets cropped */
 }
 	
     footer {
