--- a/COLLEGE.html
+++ b/COLLEGE.html
@@ -91,7 +91,7 @@
         <p style="text-align: center; color: black;padding-left: 1.5em; padding-right: 1.5em; font-size: 1.3rem; font-family: Arial, sans-serif;"> GOVERNMENT GIRLS COLLEGE DAULATPUR HAVE NO OWN BUILDING. CURRENTLY IT IS RUNNING IN VACANT OLD GIRLS HIGH SCHOOL BUILDING WITH EXCEES SHORTAGE OF PROPER LABS AND OTHER INFRA STRUCTURE.</p>
         <p style="text-align: center; color: black;padding-left: 1.5em; padding-right: 1.5em;font-size: 1.3rem; font-family: Arial, sans-serif;">THIS OLD GIRLS HIGH SCHOOL DULATPUR IS HANDED OVER BY EDO SHAHEED BENAZIR ABAD TO GOVERNMENT BOYS DEGREE COLLEGE DAULATPUR IN YEAR 2004</p>
      <p style="text-align: center; color: black;padding-left: 1.5em; padding-right: 1.5em; font-size: 1.3rem; font-family: Arial, sans-serif;">IN 2006 THE GIRLS COLLEGE ESTABLISHED WITH SNE BUT WITHOUT BUILDING WHICH TILL THEN RUNNING IN THAT BUILDING OF OLD GIRLS HIGH SCHOOL DAULATPUR ALONG WITH BOYS COLLEGE DAULATPUR </p>
-<p style="text-align: center; color: black;padding-left: 1.5em; padding-right: 1.5em; font-size: 1.3rem; font-family: Arial, sans-serif;">GOVERNMENT BOYS DEGREE COLLEGE DAULATPUR IS SHIFTED ITS OWN NEW BUILDING IN AUGUST 2023 hence completely in use of Government Girls College Daulatpur.<br><br></p>   
+<p style="text-align: center; color: black;padding-left: 1.5em; padding-right: 1.5em; font-size: 1.3rem; font-family: Arial, sans-serif;">GOVERNMENT BOYS DEGREE COLLEGE DAULATPUR IS SHIFTED ITS OWN NEW BUILDING IN AUGUST 2023 hence completely in use of Government Girls College Daulatpur.<br><br></p><br><br><br><br>   
 </div>
   
     <!-- Bootstrap JS and Popper.js -->
