--- a/ABOUT-US.html
+++ b/ABOUT-US.html
@@ -22,6 +22,10 @@
             background-color: #FFF8DC;
         }
 
+        .navbar a:hover {
+            background-color: #9b1d38;
+            border-radius: 0.25rem;
+        }
      
         .table-container {
             margin: 5% auto; /* Use percentage for margin */
