--- a/COLLEGE.html
+++ b/COLLEGE.html
@@ -24,6 +24,11 @@
             padding-left: 2vw; /* Relative padding based on viewport width */
             padding-right: 2vw; /* Relative padding based on viewport width */
         }
+	    
+        .navbar a:hover {
+            background-color: #9b1d38;
+            border-radius: 0.25rem;
+        }
 .image-container {
   position: relative;
   width: 100%; /* Relative to the container width */
