--- a/Government-Girls-College-Daulatpur.html
+++ b/Government-Girls-College-Daulatpur.html
@@ -23,6 +23,10 @@
             padding-right: 2vw;
         }
 
+        .navbar a:hover {
+            background-color: #9b1d38;
+            border-radius: 0.25rem;
+        }
         /* Gallery container styling */
         .gallery {
             display: block;
