--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
             padding-left: 2vw; /* Relative padding based on viewport width */
             padding-right: 2vw; /* Relative padding based on viewport width */
         }
+	    
+        .navbar a:hover {
+            background-color: #9b1d38;
+            border-radius: 0.25rem;
+        }
 	   .slider-container {
   width: 90%;
   max-width: 100vw;
