--- a/ONLINE-TEST.html
+++ b/ONLINE-TEST.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Government Girls College</title>
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+   
+	 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     
     <style>
       
@@ -16,99 +17,15 @@
 	    margin: 0;
             padding: 0;
         }
-     nav {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding-right: 2rem;
-	     padding-left: 2rem;
+         .navbar-custom {
             background-color: #FFF8DC;
-            position: relative;
+            padding-left: 2vw;
+            padding-right: 2vw;
         }
 
-        /* Navbar Brand (Logo) */
-        .navbar-brand {
-            font-size: 1 rem;
-            color: #000;
-            text-decoration: none;
-        }
-
-        /* Navbar Links */
-        ul {
-            display: flex;
-            list-style: none;
-            margin: 0;
-            padding: 0;
-        }
-
-        li {
-            margin-left: 2rem; /* Spacing between nav items */
-        }
-
-        a {
-            font-size: 1 rem;
-            color: #000000;
-            text-decoration: none;
-            transition: color 0.3s ease;
-        }
-
-        a:hover {
-            color: #FFC0CB; /* Change color on hover */
-        }
-
-        /* Navbar Toggler (Hamburger Icon) */
-        .navbar-toggler {
-            display: none;
-            flex-direction: column;
-            cursor: pointer;
-        }
-
-        .navbar-toggler span {
-            width: 1rem;
-            height: 0.3rem;
-            background-color: #000000;
-            margin: 0.4rem 0;
-        }
-
-        /* Mobile View (Screen width less than 768px) */
-        @media (max-width: 768px) {
-            nav {
-                flex-direction: row;
-		text-align: center;
-                align-items: flex-start;
-            }
-
-            .navbar-toggler {
-                display: flex;
-            }
-
-            ul {
-                display: none;
-                width: 100%;
-                flex-direction: column;
-                background-color:#FFFFE0;
-                position: absolute;
-                top: 100%;
-                right: 0;
-                margin: 0;
-                padding: 0;
-                z-index: 0;
-            }
-
-            ul.show {
-                display: flex;
-            }
-
-            li {
-                margin-left: 0;
-                padding: 0.7 rem;
-                text-align: left;
-            }
-
-            a {
-                font-size: 1.1rem;
-                color: #000000;
-            }
+        .navbar a:hover {
+            background-color: #9b1d38;
+            border-radius: 0.25rem;
         }
 		.container {
     width: 85%; /* The width of the container */
@@ -261,22 +178,33 @@
 
     </style>
 </head>
-<body>
-<nav>
-      <a class="navbar-brand" href="Government-Girls-College-Daulatpur.html">GGCD</a>
-	 <div class="navbar-toggler" onclick="toggleNavbar()">
-            <span></span>
-            <span></span>
-            <span></span>
+<body class="bg-gradient-to-br from-teal-300 via-indigo-200 to-blue-300">
+
+    <!-- Bootstrap Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light navbar-custom p-2">
+        <div class="container-fluid">
+            <a class="navbar-brand text-black" href="Government-Girls-College-Daulatpur.html">Govt Girls College Daulatpur</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link text-black active" aria-current="page" href="index.html">HOME</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-black" href="ONLINE-TEST.html">ONLINE TEST</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-black" href="ABOUT-US.html">ABOUT US</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-black" href="CONTACT-US.html">CONTACT US</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-	 <ul id="navbarNav">
-		 
- <li><a href="index.html" aria-label="Go to Home Page">HOME</a></li>
- <li><a href="ONLINE-TEST.html" aria-label="Go to Page">ONLINE TEST</a></li>
-<li><a href="ABOUT-US.html" aria-label="Go to Page">ABOUT US</a></li>
- <li><a href="CONTACT-US.html" aria-label="Go to Page" aria-label="Go to Home Page">CONTACT US</a></li>
-</ul>
-	</nav>
+    </nav>
 
 <div class="container">
     <h2 style="color : Blue ;">All the Best!</h2>
@@ -2038,12 +1966,6 @@
             ]
         }
     };
-     // Toggle the navigation menu in mobile view
-        function toggleNavbar() {
-            const navbarNav = document.getElementById("navbarNav");
-            navbarNav.classList.toggle("show");
-        }
- 
       function showSubjectSelection() {
         document.getElementById("subject-selection").style.display = "block";
         document.getElementById("chapter-selection").style.display = "none";
