--- a/ONLINE-TEST.html
+++ b/ONLINE-TEST.html
@@ -2140,5 +2140,6 @@
 
       showSubjectSelection(); // Initial screen to show subject selection
     </script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
