--- a/Government-Girls-College-Daulatpur.html
+++ b/Government-Girls-College-Daulatpur.html
@@ -297,6 +297,7 @@
         // Array of image paths
         const images = [
             './gallery/aa.jpg',
+            './gallery/jj.jpg',
             './gallery/ii.jpg',
             './gallery/hh.jpg',
             './gallery/gg.jpg',
