--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ h5 {
     </nav>
 <div class="container py-2">
       <h2 class="text-center">
-        <span class="walking-heading">This is a Walking Heading!</span>
+        <span class="walking-heading">New </span>
     </h2>
     
     <div class="scrolling-container">
