--- a/Government-Girls-College-Daulatpur.html
+++ b/Government-Girls-College-Daulatpur.html
@@ -194,7 +194,8 @@
             <div class="col-12 col-md-4 col-lg-3">
                 <div class="gallery">
                     <a href="#" onclick="openModal(1)">
-                        <img src="./gallery/jj.jpg" alt="jj" class="img-fluid">
+                       <img src="./gallery/jj.jpg" alt="jj" class="img-fluid" style="filter: blur(0); transition: filter 0.3s;" onmouseover="this.style.filter='blur(5px)';" onmouseout="this.style.filter='blur(0)';">
+
                     </a>
                 </div>
             </div>
