--- a/index.html
+++ b/index.html
@@ -255,7 +255,8 @@
                            <li><a href="COLLEGE.html" target="_self">College</a></li>
                            </ul>
                            </div>
-                           <div>Universities Links</h2>
+                           <div>
+				   <h2>Universities Links</h2>
                           <ul><li><a href="https://www.sbbusba.edu.pk/" target="_self">Shaheed Benazir Bhutto University</a></li>
                         <li><a href="https://www.usindh.edu.pk/" target="_self">University of Sindh JAMSHORO</a></li>
                         </ul>
