--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         </div>
 
     <!-- Bootstrap Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light navbar-custom p-2">
+    <nav class="navbar navbar-expand-lg navbar-light navbar-custom p-2 w-100">
         <div class="container-fluid">
             <a class="navbar-brand text-black" href="Government-Girls-College-Daulatpur.html">Govt Girls College Daulatpur</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
